Adjusting about me

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                     I focus on writing accessible HTML, using modern CSS practices and writing clean
                     JavaScript. When writing JavaScript code, I mostly use React, but I can adapt to
                     whatever tools are required. I’m based in Kwara, Nigeria, but I’m happy working remotely
-                    and have experience in remote teams. When I’m not coding, you’ll find me outdoors.
-                    I love being out in nature whether that’s going for a walk, run or cycling. I’d love
+                    and have experience in remote teams. When I’m not coding, I play video games. I’d love
                     you to check out my work.</p>
                 <a class="btn btn--secondary home-about__button" href="./portfolio.html">Go to Portfolio</a>
             </div>
