--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
                 <div class="home-intro__content">
 
                     <!-- background intro title -->
-                    <h1 class="home-intro__content-title">Hello, I’m David Echoda and I love building beautiful websites</h1>
+                    <h1 id="t-h1" class="home-intro__content-title">Hello, I’m David Echoda and I love building beautiful websites</h1>
 
                     <!-- end of background intro title -->
 
                     <!-- background button -->
-                    <a id="aboutme" class=" home-intro__button" type="button" href="#aboutme">
+                    <div class="home-intro__button">
+                    <a id="aboutme" type="button" href="#aboutme">
                         <div class="home-intro__button-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14">
                                 <g fill="none" fill-rule="evenodd" stroke="#5FB4A2">
@@ -101,13 +102,11 @@
                         </div>
 
                         <!-- button text -->
-                        <div class="btn">
-                            <p> About Me
-                                </p>
-                            </div>
+                        <div class="btn">About Me</div>
                         <!-- end of button text -->
                     </a>
                     </div>
+                </div>
                 
             </section>
         </div>
