readusting the font

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="./css/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@500;600&family=Public+Sans:wght@300;400;600&display=swap"
+        rel="stylesheet">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@500&family=Public+Sans:wght@300;400;600&display=swap');
+    </style>
+    <link rel="stylesheet" href="./css/main.css">
+
     <title>David Echoda Portfolio | web developer</title>
     <script defer src="./swup.min.js"></script>
     <script defer src="./app.js"></script>
@@ -84,7 +93,7 @@
                 <div class="home-intro__content">
 
                     <!-- background intro title -->
-                    <h1 id="t-h1" class="home-intro__content-title">Hello, I’m David Echoda and I love building beautiful websites</h1>
+                    <h1 class="home-intro__content-title">Hello, I’m David Echoda and I love building beautiful websites</h1>
 
                     <!-- end of background intro title -->
 
@@ -117,7 +126,7 @@
             <div class="home-about__image">
             </div>
             <div class="home-about__content">
-                <h2 class="t-h2 home-about__content__heading">About Me</h2>
+                <h2 class="home-about__content__heading">About Me</h2>
                 <p class="t-body1 home-about__introduction">I’m a junior front-end developer looking for a new role
                     in an exciting company.
                     I focus on writing accessible HTML, using modern CSS practices and writing clean
