footer for mobile settled

--- a/index.html
+++ b/index.html
@@ -147,27 +147,30 @@
             </section>
         
     <footer class="footer">
-        <div class="container">
-            <div class="footer__logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="61" height="32">
-                    <path fill="#33323D" fill-rule="evenodd"
-                        d="M60.082 5.878L44.408 32 28.735 5.878h31.347zM15.673 0l15.674 26.122H0L15.673 0z" />
-                </svg>
+        <div class="container footer__container">
+            <div class="footer__container-left" >
+<div class="footer__logo">
+    <svg xmlns="http://www.w3.org/2000/svg" width="61" height="32">
+        <path fill="#33323D" class="t-white" fill-rule="evenodd"
+            d="M60.082 5.878L44.408 32 28.735 5.878h31.347zM15.673 0l15.674 26.122H0L15.673 0z" />
+    </svg>
+</div>
+<ul class="footer__nav-items">
+    <li class="footer__nav-items__nav-item">
+        <a class="t-nav-link t-white" href="./index.html">Home</a>
+    </li>
+    <li class="footer__nav-items__nav-item">
+        <a class="t-nav-link t-white make_white" href="./portfolio.html">Portfolio</a>
+    </li>
+    <li class="footer__nav-items__nav-item">
+        <a class="t-nav-link t-white" href="./contact.html">Contact Me</a>
+    </li>
+</ul>
             </div>
-            <ul class="footer__nav-items">
-                <li class="footer__nav-items__nav-item">
-                    <a class="t-nav-link t-white" href="./index.html">Home</a>
-                </li>
-                <li class="footer__nav-items__nav-item">
-                    <a class="t-nav-link t-white" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="footer__nav-items__nav-item">
-                    <a class="t-nav-link t-white" href="./contact.html">Contact Me</a>
-                </li>
-            </ul>
+           
             <ul class="footer__socials">
                 <li class="footer__socials__social">
-                    <a href="https://github.com/zuolizhu" target="_blank">
+                    <a href="https://github.com/solemnseagal" target="_blank">
                         <span class="screen-reader-only">Github</span>
                         <svg class="footer__socials__social__icon" xmlns="http://www.w3.org/2000/svg" width="25"
                             height="24">
@@ -187,7 +190,7 @@
                     </a>
                 </li>
                 <li class="footer__socials__social">
-                    <a href="https://www.linkedin.com/in/zuolizhu/" target="_blank">
+                    <a href="https://www.linkedin.com/in/david-echoda-99b900201/" target="_blank">
                         <span class="screen-reader-only">LinkedIn</span>
                         <svg class="footer__socials__social__icon" xmlns="http://www.w3.org/2000/svg" width="24"
                             height="24">
@@ -197,6 +200,7 @@
                     </a>
                 </li>
             </ul>
+            </div>
         </div>
     </footer>
     <script>
