--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div> -->
 
                 <!-- navigation menu list for desktop -->
-                <ul class="main-nav-links ai-c">
+                <ul class="main-nav-links ai-c  hide_for_mob">
                     <li class="main-nav-links-item">
                         <a class="active" href="./index.html">HOME</a>
                     </li>
@@ -70,12 +70,16 @@
                         <a class="t-nav-link t-white" href="./contact.html">Contact Me</a>
                     </li>
                 </ul> -->
+
+                <div class="main-nav-burger hide_for_desk">
+                    <span class="main-nav-burger-item"></span>
+                </div>
             </nav>
         </header>
         <!-- end of header section -->
 
         <!-- main body section -->
-        <main id="swup" class="main main--home transition-fade">
+        <main id="swup" class="main main--home">
             <div class="container">
 
                 <!-- Large background image and intro section -->
