--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </div>
             </div>
         </footer>
-        <script>
+        <script src="./App/js/index.js">
             // only used in homepage
             const aboutme = document.getElementById('aboutme');
             const aboutmesec = document.getElementById('aboutmesec');
