--- a/index.html
+++ b/index.html
@@ -48,17 +48,21 @@
                 </div> -->
 
                 <!-- navigation menu list for desktop -->
-                <ul class="main-nav-links ai-c  hide_for_mob">
-                    <li class="main-nav-links-item">
-                        <a class="active" href="./index.html">HOME</a>
-                    </li>
-                    <li class="main-nav-links-item">
-                        <a href="./portfolio.html">PORTFOLIO</a>
-                    </li>
-                    <li class="main-nav-links-item">
-                        <a href="./contact.html">CONTACT ME</a>
-                    </li>
-                </ul>
+
+                <div class="hide_for_mob">
+                    <div class="overlay"></div>
+                    <ul class="main-nav-links ai-c">
+                        <li class="main-nav-links-item">
+                            <a class="active" href="./index.html">HOME</a>
+                        </li>
+                        <li class="main-nav-links-item">
+                            <a href="./portfolio.html">PORTFOLIO</a>
+                        </li>
+                        <li class="main-nav-links-item">
+                            <a href="./contact.html">CONTACT ME</a>
+                        </li>
+                    </ul>
+                </div>
                 <!-- <ul class="mobile-nav__nav-items hide" id="mobile-nav">
                     <li class="mobile-nav__nav-item">
                         <a class="t-nav-link t-white" href="./index.html">Home</a>
